fix profile picture ordering on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 .description-p {
     text-align: justify; 
 }
+
+@media screen and (max-width: 769px) {
+    .reverse-column-order {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+}
